<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAE1EB"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_gravity="center"
        android:layout_width="167dp"
        android:layout_height="154dp"
        android:layout_marginTop="95dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_title"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/attachComplex"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cornerRadius="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attach_complex"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/confirmEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"
                app:cornerRadius="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_email"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/changePhone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"
                app:cornerRadius="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_phone"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"
                app:cornerRadius="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addVehicle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"
                app:cornerRadius="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_vehicle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/cameras"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_home"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/messages"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_profile"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/options" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_settings"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>